--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ body {
     margin-top: 50px;
     background-color: rgb(216, 206, 206);
     border-radius: 12px;
-    box-shadow: 0 0 1em #ee1d27;
+    box-shadow: 0 0 1em #747172;
 
 }
 
@@ -84,13 +84,14 @@ body {
 
 .linha {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
 
 }
 
 .botao {
-    width: 30vw;
+    width: 100%;
     height: 40px;
+    background-color: #b5b2bb;
     border-radius: 8px;
     box-shadow: 0px 1px 5px #726f6f;
     border: 0.001rem solid black;
@@ -99,6 +100,21 @@ body {
 
 }
 
+
+
+.texto{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 40px;
+    padding: 5px 10px;
+    color: black;
+    text-decoration: none;
+   
+
+
+
+}
 
 
 /* Midia Tablets */
@@ -111,7 +127,7 @@ body {
 
 
     .botao {
-        width: 22vw;}
+        width: 100%;}
 
     .input-field {
         font-size: 1.3rem;
