mudei a cor do backgroud para white

--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ body {
     margin: 0 auto;
     padding: 10px 30px;
     margin-top: 50px;
-    background-color: rgb(216, 206, 206);
+    background-color: white;
     border-radius: 12px;
     box-shadow: 0 0 1em #747172;
 
